# multisport-ha

./: .gitignore  PROJECT_STATE.md  README.md  hacs.json  pyproject.toml  release.sh
.github/workflows/: ci.yml  release.yml
custom_components/multisport/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  services.yaml
custom_components/multisport/translations/: en.json  pl.json
tests/: common.py  conftest.py  test_config_flow.py
tests/custom_components/: multisport
