[project]
name = "multisport-ha"
version = "0.1.0"
description = "Home Assistant integration for MultiSport"
authors = [
    { name = "TheUndefined", email = "undefine@aramin.net" },
]
license = "MIT"
requires-python = ">=3.10"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-httpx",
    "pytest-homeassistant-custom-component",
]
dev = [
    "ruff",
    "black",
    "mypy",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests", "build"]
